packages/core/src/components/tooltip/tooltip.scss
:host {
  display: inline-block;
  position: absolute;
  left: 0px;
  top: 0px;

  max-width: 18.25rem;

  opacity: 0;
  visibility: collapse;
  overflow-wrap: break-word;

  border-radius: 0.25rem;
  background-color: var(--theme-tootlip--background);
  padding: 0.375rem 0.75rem 0.375rem 0.875rem;

  box-shadow: var(--theme-shadow-4);

  .tooltip-title {
    display: flex;
    align-items: center;

    ::slotted(ix-icon) {
      margin-right: 0.35rem;
    }
  }
}

:host(.visible) {
  opacity: 1;
  visibility: visible;
}

:host {
  .arrow,
  .arrow::before {
    position: absolute;
    width: 8px;
    height: 8px;
    background: inherit;
  }

  .arrow {
    visibility: hidden;
  }

  .arrow::before {
    visibility: visible;
    content: '';
    transform: rotate(45deg);
    background-color: var(--theme-tootlip--background);
  }
}

